2012-10-22  Dominik Röttsches  <dominik.rottsches@intel.com>

        Adding Cairo and Harfbuzz watchlist entries

        Unreviewed watchlist update.

        Added myself to these new ones and SVG.

        * Scripts/webkitpy/common/config/watchlist:

2012-10-22  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: do not double count memory of objects with multiple ancestors
        https://bugs.webkit.org/show_bug.cgi?id=99958

        Reviewed by Alexander Pavlov.

        * TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp: Test that there
        is no double counting in case of multiple inheritance.

2012-10-22  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Basic gesture event handling
        https://bugs.webkit.org/show_bug.cgi?id=66173

        Reviewed by Simon Hausmann.

        Add support for eventSender.gestureLongPress.

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::EventSender):
        (EventSender::gestureLongPress):
        * DumpRenderTree/qt/EventSenderQt.h:
        (EventSender):

2012-10-22  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [WTR] Properly initialize TestRunner::m_dumpSelectionRect.
        https://bugs.webkit.org/show_bug.cgi?id=99970

        Reviewed by Kenneth Rohde Christiansen.

        Follow-up to r131476: actually initialize m_dumpSelectionRect to
        some value to avoid some flakyness in the tests.

        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::TestRunner):

2012-10-22  Tor Arne Vestbø  <tor.arne.vestbo@digia.com>

        [Qt] Don't build any of the tools in production_build

        Reviewed by Simon Hausmann.

        * Tools.pro:
        * qmake/mkspecs/features/configure.prf:

2012-10-22  Tor Arne Vestbø  <tor.arne.vestbo@digia.com>

        [Qt] Move OBJECTS_DIR and friends to default_pre.prf

        The introduction of load(qt_build_config) in .qmake.conf meant